--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -5,7 +5,7 @@
             <div class="col-lg-12 col-12">
                 <p class="copyright-text text-center">footer</p>
             </div>
-
+            asdsa
         </div>
     </div>
 </footer>
