--- a/public/components/InicioSesion.html
+++ b/public/components/InicioSesion.html
@@ -1,4 +1,4 @@
-<div id="id01" class="modal">
+<div id="id01" class="modal" style="display:none;">
 
     <div class="modal-content animate">
         <div class="imgcontainer">
