--- a/public/components/InicioSesion.html
+++ b/public/components/InicioSesion.html
@@ -24,3 +24,14 @@
 </div>
 
 <script src="/js/inicioSesion.js"></script>
+
+
+<!-- <script>
+    localStorage.removeItem('token');
+    localStorage.removeItem('nickname');
+    localStorage.removeItem('email');
+    localStorage.removeItem('name');
+    localStorage.removeItem('lastName');
+
+
+</script> -->
