Changing update mail

--- a/public/components/header.html
+++ b/public/components/header.html
@@ -23,6 +23,11 @@
                 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"
                     id="botonLogin">Login</button>
                 <h3 id="msgNombreLogueado" style="display:none;">Nombre</h1>
+                    <div name=" form1">
+                        <label class="logoutLblPos">
+                            <input name="submit2" type="submit" id="submit2" value="log out" onclick="logOut()">
+                        </label>
+                    </div>
 
             </ul>
 
