--- a/public/layouts/InicioSesion.ejs
+++ b/public/layouts/InicioSesion.ejs
@@ -23,15 +23,4 @@
     </div>
 </div>
 
-<script src="/js/inicioSesion.js"></script>
-
-
-<!-- <script>
-    localStorage.removeItem('token');
-    localStorage.removeItem('nickname');
-    localStorage.removeItem('email');
-    localStorage.removeItem('name');
-    localStorage.removeItem('lastName');
-
-
-</script> -->
+<!-- <script src="/js/inicioSesion.js"></script> -->
