--- a/public/layouts/footer.ejs
+++ b/public/layouts/footer.ejs
@@ -1,11 +1,10 @@
-<footer class="footer py-5">
+<footer id="footer" class="footer py-5">
     <div class="container">
         <div class="row">
 
             <div class="col-lg-12 col-12">
                 <p class="copyright-text text-center">footer</p>
             </div>
-            asdsa
         </div>
     </div>
 </footer>
