--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -10,18 +10,19 @@
   <title>Notificacion de consultas </title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/unicons.css">
-  <link rel="stylesheet" href="css/login.css">
-  <link rel="stylesheet" href="css/acordion.css">
+  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="stylesheet" href="css/unicons.css"> -->
+  <!-- <link rel="stylesheet" href="css/login.css"> -->
+  <!-- <link rel="stylesheet" href="css/acordion.css"> -->
 
   <!-- MAIN STYLE -->
-  <link rel="stylesheet" href="css/tooplate-style.css">
+  <!-- <link rel="stylesheet" href="css/tooplate-style.css"> -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <!-- <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/Headroom.js"></script>
   <script src="js/jQuery.headroom.js"></script>
   <script src="js/owl.carousel.min.js"></script>
-  <script src="js/acordion.js"></script>
+  <script src="js/acordion.js"></script> -->
 
 </head>
 
