--- a/public/pages/notificationApp.ejs
+++ b/public/pages/notificationApp.ejs
@@ -24,8 +24,17 @@
       </p>
     </h1>
 
+    <!-- ACTIVIDADES -->
 
-
+    <section class="about d-lg-flex justify-content-center align-items-center" id="actividades"
+      style="margin-top: 100px;">
+      <div class="container" id="divCategorias">
+        <h1 id="msgNoLogueado">Debes estar logueado para ver las actividades</h1>
+        <div class="col-lg-8 mx-auto" style="display: none;" id="actTitulo">
+          <h2>Actividades</h2>
+        </div>
+      </div>
+    </section>
 
 
     <div id="newQuery">
@@ -41,14 +50,12 @@
     </div>
 
     <script src="/js/jquery-3.3.1.min.js"></script>
-    <script src="../js/consultas.js"></script>
+    <script src="../js/queries.js"></script>
 
     <!-- FOOTER -->
     <% include ../layouts/footer %>
 
       <script src="js/jquery-3.3.1.min.js"></script>
-
-
 
 </body>
 
