--- a/public/layouts/header.ejs
+++ b/public/layouts/header.ejs
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
             <div class="header_logo" style="display:flex;align-items: center;">
                 <a href="/">
-                    <img id="headerLogoImg" src="/images/logoSinFondo.png" />
+                    <img id="headerLogoImg" src="/images/logoSinFondo2-min.png" />
                 </a>
                 <a href="/" class="navbar-brand">
                     <p style="padding-left: 15px;" id="companyName"> Naquadriah Software</p>
