--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ html {
    }
 
 body {
-    background-image: url("/images/mundo.jpg");
+    background-image: url("/images/mundoSinLetras-min.jpg");
     height: 100%;
     /* background-position: center; */
     background-repeat: no-repeat;
