haciendo pagina principal

--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -29,11 +29,45 @@
 <body>
   <% include ../layouts/header %>
 
+    <div class="bloqueQuienesSomos">
+      <p class="tituloQuienesSomos">Naquadriah</p>
 
+      <p class="textoQuienesSomos">
+        Somos una empresa joven creada en Montevideo, Urugauy en el año 2022.
+        <br>
+        Tenemos como finalidad principal la de contruibuir al desarrollo de pruebas de concepto, proyectos personales de
+        pequeño y mediano tamaño así como tambien al soporte, mantenimiento y de proyectos existentes.
+        <br>
+        Nuestra mision es la proporcionar un desarrollo de alta calidad en cada producto manteniendo un excelente trato
+        con cada cliente.
+      </p>
+    </div>
 
-    <!-- PARA IMPORTAR MAS DE UN HIJO -->
-    <!-- <iframe src="included.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe> -->
+    <div class="bloqueEquipo">
+      <p class="tituloEquipo">Equipo</p>
 
+      <div class="listaEquipo">
+        <div class="integrante">
+          <img src="/images/EF.jpg" class="imgIntegrante">
+          <h4>Ernesto Fernandez</h4>
+          <h7>Fullstack developer</h7>
+
+        </div>
+        <div class="integrante">
+          <img src="/images/DP.jpg" class="imgIntegrante">
+          <h4>Daryan Paez</h4>
+          <h7>Frontend developer</h7>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="bloqueQuienesSomos">
+      <p class="tituloQuienesSomos">Tecnologías</p>
+
+      <p class="textoQuienesSomos">
+
+    </div>
     <!-- FOOTER -->
     <% include ../layouts/footer %>
 
