--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    background-color: #010101;
    }
 
 body {
@@ -14,7 +15,7 @@ body {
 
 
    #footer {
-    position:absolute;
+    position:static;
     bottom:0;
     width:100%;
     height:60px;   /* Height of the footer */
@@ -50,3 +51,71 @@ body {
 #companyName {
     font-family: 'Blanka' !important;
 }
+
+.textoQuienesSomos{
+    font-size: large;
+    text-align: justify;
+    background-color: #01010157;
+    border-style: solid;
+    border-color: #01010138;
+    border-radius: 5%;
+    padding: 50px;
+    font-family: Inter;
+    line-height: 150%;
+
+
+}
+
+.tituloQuienesSomos{
+    font-family: 'Blanka' !important;
+    font-size: xx-large;
+    /* background-color: #01010157; */
+}
+
+.bloqueQuienesSomos{
+    color: white;
+    font-family: 'Blanka' !important;
+    text-align: center;
+}
+
+.imgIntegrante{
+    max-width: 300px;
+    max-height: 500px;
+}
+
+.integrante{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+.tituloEquipo{
+    font-family: 'Blanka' !important;
+    font-size: xx-large;
+    /* background-color: #01010157; */
+}
+
+.bloqueEquipo{
+    color: white;
+    font-family: 'Blanka' !important;
+    text-align: center;
+}
+.listaEquipo{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media (min-width: 600px) {
+    .bloqueQuienesSomos{
+        padding-top: 5%;
+        padding-left: 20%;
+        padding-right: 20%;
+    
+    }
+  }
+@media (max-width: 768px) {
+    .bloqueQuienesSomos{
+        padding-top: 5%;    
+    }
+  }
