--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -51,23 +51,35 @@
           <img src="/images/EF.jpg" class="imgIntegrante">
           <h4>Ernesto Fernandez</h4>
           <h7>Fullstack developer</h7>
-
         </div>
         <div class="integrante">
           <img src="/images/DP.jpg" class="imgIntegrante">
           <h4>Daryan Paez</h4>
           <h7>Frontend developer</h7>
-
         </div>
       </div>
     </div>
 
-    <div class="bloqueQuienesSomos">
-      <p class="tituloQuienesSomos">Tecnologías</p>
 
-      <p class="textoQuienesSomos">
+    <div class="bloqueProyectos">
+      <p class="tituloProyectos">Proyectos</p>
 
+      <div class="listaProyectos">
+        <div class="integrante">
+          <img src="/images/NotificationQuery2.jpg" class="imgIntegrante">
+          <h4>Notification query</h4>
+        </div>
+        <div class="integrante">
+          <img src="/images/ProyectoCircuito3.jpg" class="imgIntegrante">
+          <h4>Minimun lenght circuit trip</h4>
+        </div>
+        <div class="integrante">
+          <img src="/images/agendaWeb2.jpg" class="imgIntegrante">
+          <h4>Early bookings (Nacional Social Club)</h4>
+        </div>
+      </div>
     </div>
+
     <!-- FOOTER -->
     <% include ../layouts/footer %>
 
