--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -66,15 +66,15 @@
 
       <div class="listaProyectos">
         <div class="integrante">
-          <img src="/images/NotificationQuery2.jpg" class="imgIntegrante">
+          <img src="/images/NotificationQuery2.jpg" class="imgProyecto">
           <h4>Notification query</h4>
         </div>
         <div class="integrante">
-          <img src="/images/ProyectoCircuito3.jpg" class="imgIntegrante">
+          <img src="/images/ProyectoCircuito3.jpg" class="imgProyecto">
           <h4>Minimun lenght circuit trip</h4>
         </div>
         <div class="integrante">
-          <img src="/images/agendaWeb2.jpg" class="imgIntegrante">
+          <img src="/images/agendaWeb2.jpg" class="imgProyecto">
           <h4>Early bookings (Nacional Social Club)</h4>
         </div>
       </div>
