--- a/public/layouts/header.ejs
+++ b/public/layouts/header.ejs
@@ -27,14 +27,18 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">Sobre nosotros</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown"
+                        <li><a class="nav-link" href="#proyectos">Proyectos </a>
+                        </li>
+                        <!-- <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown"
                                 aria-expanded="false" href="#">Proyectos </a>
                             <div class="dropdown-menu" role="menu">
                                 <a class="dropdown-item" role="presentation" href="/notificationApp">NotificationApp</a>
                                 <a class="dropdown-item" role="presentation" href="#">MinimumCircuitLength</a>
                             </div>
+                        </li> -->
+                        <li><a class="nav-link" href="#equipo">Equipo </a>
                         </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contacto</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                     <a id="botonLogin" class="btn btn-light action-button" role="button"
                         onclick="document.getElementById('id01').style.display='block'">Ingresar</a>
