--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/homepage.css">
   <!-- <link rel="stylesheet" href="css/unicons.css"> -->
   <!-- <link rel="stylesheet" href="css/login.css"> -->
   <!-- <link rel="stylesheet" href="css/acordion.css"> -->
@@ -29,8 +30,8 @@
 <body>
   <% include ../layouts/header %>
 
-    <div class="bloqueQuienesSomos">
-      <p class="tituloQuienesSomos">Naquadriah</p>
+    <div class="bloqueQuienesSomos bloqueHome">
+      <p class="tituloHome">Naquadriah</p>
 
       <p class="textoQuienesSomos">
         Somos una empresa joven creada en Montevideo, Urugauy en el año 2022.
@@ -43,8 +44,32 @@
       </p>
     </div>
 
-    <div class="bloqueEquipo">
-      <p class="tituloEquipo">Equipo</p>
+    <div id="proyectos" class="bloqueHome">
+      <p class="tituloHome">Proyectos</p>
+
+      <div class="listaProyectos">
+
+        <div class="proyecto">
+          <a href="/notificationApp" class="linkProyecto">
+            <img src="/images/NotificationQuery2.jpg" class="imgProyecto">
+
+            <h4>Notification query</h4>
+          </a>
+        </div>
+
+        <div class="proyecto" class="linkProyecto">
+          <img src="/images/ProyectoCircuito3.jpg" class="imgProyecto">
+          <h4>Minimun lenght circuit trip</h4>
+        </div>
+        <div class="proyecto" class="linkProyecto">
+          <img src="/images/agendaWeb2.jpg" class="imgProyecto">
+          <h4>Early bookings (Nacional Social Club)</h4>
+        </div>
+      </div>
+    </div>
+
+    <div id="equipo" class="bloqueHome">
+      <p class="tituloHome">Equipo</p>
 
       <div class="listaEquipo">
         <div class="integrante">
@@ -60,32 +85,63 @@
       </div>
     </div>
 
+    <div id="contacto" class="bloqueHome">
+      <p class="tituloHome">Contacto</p>
+      <div class="containerContacto">
 
-    <div class="bloqueProyectos">
-      <p class="tituloProyectos">Proyectos</p>
+        <form class="contact100-form validate-form">
+          <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Nombre requerido">
+            <span class="label-input100">Nombre</span>
+            <input class="input100" type="text" name="name" placeholder="Ingresa tu nombre">
+            <span class="focus-input100"></span>
+          </div>
 
-      <div class="listaProyectos">
-        <div class="integrante">
-          <img src="/images/NotificationQuery2.jpg" class="imgProyecto">
-          <h4>Notification query</h4>
-        </div>
-        <div class="integrante">
-          <img src="/images/ProyectoCircuito3.jpg" class="imgProyecto">
-          <h4>Minimun lenght circuit trip</h4>
-        </div>
-        <div class="integrante">
-          <img src="/images/agendaWeb2.jpg" class="imgProyecto">
-          <h4>Early bookings (Nacional Social Club)</h4>
-        </div>
+          <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Apellido es requerido">
+            <span class="label-input100">Apellido</span>
+            <input class="input100" type="text" name="name" placeholder="Ingresa tu apellido">
+            <span class="focus-input100"></span>
+          </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Email es requerido">
+            <span class="label-input100">Nombre proyecto</span>
+            <input class="input100" type="text" name="name" placeholder="Ingresa tu email">
+            <span class="focus-input100"></span>
+          </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Email válido es requerido: yo@miempresa.com">
+            <span class="label-input100">Email</span>
+            <input class="input100" type="text" name="email" placeholder="Ingresa tu email">
+            <span class="focus-input100"></span>
+          </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Mensaje es requerido">
+            <span class="label-input100">Mensaje</span>
+            <textarea class="input100" name="message" placeholder="Tu mensaje aquí..."></textarea>
+            <span class="focus-input100"></span>
+          </div>
+
+          <div class="container-contact100-form-btn">
+            <button class="contact100-form-btn">
+              <span>
+                Enviar
+                <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+              </span>
+            </button>
+          </div>
+        </form>
+
+        <span class="contact100-more">
+          Por alguna consulta contactarse a: <span class="contact100-more-highlight">(598)-99659219</span>
+        </span>
       </div>
+
     </div>
 
     <!-- FOOTER -->
     <% include ../layouts/footer %>
 
       <script src="js/jquery-3.3.1.min.js"></script>
-
-
+      <script src="js/layout/contact.js"></script>
 
 </body>
 
