--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -240,4 +240,32 @@
     color: #ff4b5a;
   }
   
-  
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.email-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 10px;
+}
+
+/* Modal Content/Box */
+.email-modal-content {
+  background-color: darkgrey;
+  padding: 20px 0px; 
+  border: 1px solid #888;
+  text-align: center;
+}
+
