--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Notificacion de consultas </title>
+  <title>Naquadriah Software</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
