--- a/public/pages/info.ejs
+++ b/public/pages/info.ejs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <% include ../layouts/header %>
+  <% include ../layouts/headerHomepage %>
 
     <!-- Ultimas ejecuciones -->
     <% include ../layouts/lastExcecutions %>
