--- a/public/pages/notificationApp.ejs
+++ b/public/pages/notificationApp.ejs
@@ -15,14 +15,24 @@
 </head>
 
 <body>
-  <% include ../layouts/header %>
+  <% include ../layouts/headerHomepage %>
 
 
     <h1>
-      <p>
+      <p style="color: white;">
         NotificationApp
       </p>
     </h1>
+
+    <div class="bloqueConsultas">
+      <div id="newQuery">
+
+        Nombre de la consulta:<input type="text" placeholder="Mi consulta" /> <br /><br />
+        Apellidos:<input type="text" placeholder="Venta apartamento la blanqueada" /> <br /><br />
+        Tipo: <input type="radio" /> <br /><br />
+        <button>Agregar consulta</button>
+      </div>
+    </div>
 
     <!-- ACTIVIDADES -->
 
