--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,8 +62,6 @@ body {
     padding: 50px;
     font-family: Inter;
     line-height: 150%;
-
-
 }
 
 .tituloHome{
@@ -73,8 +71,8 @@ body {
 }
 
 .imgIntegrante{
-    max-width: 300px;
-    max-height: 500px;
+    width: 300px;
+    height: 350px;
 }
 
 .integrante{
@@ -133,3 +131,15 @@ body {
         padding-top: 5%;    
     }
   }
+
+  .bloqueConsultas{
+    font-size: large;
+    text-align: justify;
+    background-color: #01010157;
+    border-style: solid;
+    border-color: #01010138;
+    border-radius: 5%;
+    padding: 50px;
+    font-family: Inter;
+    line-height: 150%;
+}
