--- a/public/pages/homepage.ejs
+++ b/public/pages/homepage.ejs
@@ -28,10 +28,10 @@
 </head>
 
 <body>
-  <% include ../layouts/header %>
+  <% include ../layouts/headerHomepage %>
 
     <div class="bloqueQuienesSomos bloqueHome">
-      <p class="tituloHome">Naquadriah</p>
+      <p id="quieneSomos" class="tituloHome">Naquadriah</p>
 
       <p class="textoQuienesSomos">
         Somos una empresa joven creada en Montevideo, Urugauy en el año 2022.
@@ -62,8 +62,10 @@
           <h4>Minimun lenght circuit trip</h4>
         </div>
         <div class="proyecto" class="linkProyecto">
-          <img src="/images/agendaWeb2.jpg" class="imgProyecto">
-          <h4>Early bookings (Nacional Social Club)</h4>
+          <a href="/earlyBookingApp" class="linkProyecto">
+            <img src="/images/agendaWeb2.jpg" class="imgProyecto">
+            <h4>Early bookings (Nacional Social Club)</h4>
+          </a>
         </div>
       </div>
     </div>
@@ -74,13 +76,43 @@
       <div class="listaEquipo">
         <div class="integrante">
           <img src="/images/EF.jpg" class="imgIntegrante">
-          <h4>Ernesto Fernandez</h4>
+          <div style="font-size: x-large;  display: flex; justify-content: center;">
+            <p style="font-size: x-large; margin-top: 8px;margin-bottom: 0;">Ernesto Fernandez</p>
+            <a style=" margin-left: 8px;" href="https://www.linkedin.com/in/ernesto-fernandez-463aa244/">
+              <svg xmlns="http://www.w3.org/2000/svg"
+                style="color: #0a66c2; background-color: white; border-radius: 5px;" width="34" height="34"
+                viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+                <g>
+                  <path
+                    d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z"
+                    fill="currentColor"></path>
+                </g>
+              </svg>
+            </a>
+          </div>
           <h7>Fullstack developer</h7>
         </div>
         <div class="integrante">
           <img src="/images/DP.jpg" class="imgIntegrante">
-          <h4>Daryan Paez</h4>
+          <div style="font-size: x-large;  display: flex; justify-content: center;">
+            <p style="font-size: x-large; margin-top: 8px;margin-bottom: 0;">Daryan Paez</p>
+            <a style=" margin-left: 8px;" href="https://www.linkedin.com/in/daryan-paez-74b0a178/">
+              <svg xmlns="http://www.w3.org/2000/svg"
+                style="color: #0a66c2; background-color: white; border-radius: 5px;" width="34" height="34"
+                viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+                <g>
+                  <path
+                    d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z"
+                    fill="currentColor"></path>
+                </g>
+              </svg>
+            </a>
+          </div>
           <h7>Frontend developer</h7>
+
+
         </div>
       </div>
     </div>
