trabajdno en notification app

--- a/public/layouts/InicioSesion.ejs
+++ b/public/layouts/InicioSesion.ejs
@@ -9,10 +9,10 @@
 
         <div class="container">
             <label for="uname"><b>Username</b></label>
-            <input type="text" id="nameInput" placeholder="Enter Username" name="uname" required>
+            <input type="text" id="nameLoginField" placeholder="Enter Username" name="uname" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" id="passwordInput" placeholder="Enter Password" name="psw" required>
+            <input type="password" id="passLoginField" placeholder="Enter Password" name="psw" required>
             <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña
                     incorrectas.</b></label>
             <label id="validCredentialLastname" style="color: red; display: none;"><b>Su usuario no está habilitado para
