--- a/public/layouts/headerNotificationApp.ejs
+++ b/public/layouts/headerNotificationApp.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/login.css">
+<link rel="stylesheet" href="/css/notificationApp.css">
 
 <div id="header">
 
@@ -26,26 +27,22 @@
                         navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Sobre nosotros</a></li>
-                        <li><a class="nav-link" href="#proyectos">Proyectos </a>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#agregarConsultas">Agregar
+                                consultas</a></li>
+                        <li><a class="nav-link" href="#misConsultas">Mis consultas </a>
                         </li>
-                        <!-- <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown"
-                                aria-expanded="false" href="#">Proyectos </a>
-                            <div class="dropdown-menu" role="menu">
-                                <a class="dropdown-item" role="presentation" href="/notificationApp">NotificationApp</a>
-                                <a class="dropdown-item" role="presentation" href="#">MinimumCircuitLength</a>
-                            </div>
-                        </li> -->
-                        <li><a class="nav-link" href="#equipo">Equipo </a>
-                        </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#contacto">Contacto</a></li>
+
+                        <li class="nav-item" role="presentation"><a class="nav-link"
+                                href="#ultEjecuciones">Ejecuciones</a></li>
                     </ul>
                     <a id="botonLogin" class="btn btn-light action-button" role="button"
+                        style="background-color: rgba(255, 75, 90, 0.5)"
                         onclick="document.getElementById('id02').style.display='block'">Ingresar</a>
                     <h3 id="msgNombreLogueado" style="display:none;">Nombre</h1>
                         <label class="logoutLblPos">
                             <input name="submit2" type="submit" id="botonLogout" value="Salir"
-                                class="btn btn-light action-button" onclick="logOut()">
+                                style="background-color: rgba(255, 75, 90, 0.5)" class="btn btn-light action-button"
+                                onclick="logOut()">
                         </label>
                 </div>
             </div>
@@ -54,27 +51,43 @@
     </div>
 </div>
 
-<div id="id01" class="modal" style="display:none;">
+<div id="id02" class="modal" style="display:none;">
 
-    <div class="modal-content animate">
+    <div id="modalLoginNotificationApp" class="modal-content animate">
         <div class="imgcontainer">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                title="Close Modal">&times;</span>
-            <img src="/images/mercadolibre.png" alt="Avatar" class="avatar">
+            <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal"
+                style="color: white;">&times;</span>
+            <p style="font-weight: bold;
+            font-size: 30px; ">Iniciar sesión
+            </p>
         </div>
 
         <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" id="nameInput" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input type="password" id="passwordInput" placeholder="Enter Password" name="psw" required>
+            <div class="wrap-input100 validate-input" data-validate="Usuario válido requerido">
+                <span class="label-input100">Usuario</span>
+                <input id="nameLoginField" class="input100" type="text" name="nameLogin" placeholder="Ingrese usuario"
+                    required>
+                <span class="focus-input100"></span>
+            </div>
+            <div class="wrap-input100 validate-input" data-validate="Contraseña válida requerida">
+                <span class="label-input100">Contraseña</span>
+                <input id="passLoginField" class="input100" type="password" name="passLoginField"
+                    placeholder="Ingrese contraseña">
+                <span class="focus-input100"></span>
+            </div>
             <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña
                     incorrectas.</b></label>
             <label id="validCredentialLastname" style="color: red; display: none;"><b>Su usuario no está habilitado para
                     usar esta web.</b></label>
 
-            <button onclick="iniciarSesion()">Iniciar sesión</button>
+            <div style="text-align:right ">
+                <button onclick="iniciarSesion()" class="contact100-form-btn" style="display: revert;">
+                    <span>
+                        Iniciar sesión
+                        <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+                    </span>
+                </button>
+            </div>
         </div>
     </div>
 </div>
