--- a/public/pages/earlyBookingApp.ejs
+++ b/public/pages/earlyBookingApp.ejs
@@ -71,10 +71,10 @@
 
         <div class="container">
           <label for="uname"><b>Username</b></label>
-          <input type="text" id="nameInput" placeholder="Enter Username" name="uname" required>
+          <input type="text" id="nameLoginField" placeholder="Enter Username" name="uname" required>
 
           <label for="psw"><b>Password</b></label>
-          <input type="password" id="passwordInput" placeholder="Enter Password" name="psw" required>
+          <input type="password" id="passLoginField" placeholder="Enter Password" name="psw" required>
           <label id="validCredential" style="color: red; display: none;"><b>Usuario/contraseña incorrectas.</b></label>
           <label id="validCredentialLastname" style="color: red; display: none;"><b>Su usuario no está habilitado para
               usar esta web.</b></label>
@@ -162,8 +162,8 @@
 
       function iniciarSesion() {
         let params = JSON.stringify({
-          user: document.getElementById('nameInput').value,
-          password: document.getElementById('passwordInput').value,
+          user: document.getElementById('nameLoginField').value,
+          password: document.getElementById('passLoginField').value,
         });
 
         const http = new XMLHttpRequest()
